testsuite/tests/typecheck/should_fail/T14048b.stderr

T14048b.hs:7:1: error:
    • Kind signature on data family declaration has non-TYPE
      and non-variable return kind ‘Constraint’
    • In the data family declaration for ‘Foo’
